# portfolio

./: .editorconfig  .eslintignore  .eslintrc.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
apps/blog/: admin.py  apps.py  urls.py
apps/blog/migrations/: 0001_initial.py  0002_alter_blogspost_slug_and_more.py
apps/blog/models/: __init__.py  blogs.py
apps/blog/views/: blogs.py  posts.py
apps/core/: admin.py  apps.py  context_processors.py  urls.py
apps/core/migrations/: 0003_social_show_in_navbar.py  0005_alter_biography_text_en.py  0007_rename_position_work_position_es_work_position_en.py  0008_rename_end_work_end_es_rename_start_work_start_es_and_more.py
apps/core/models/: home.py
apps/core/views/: home.py
apps/project/: apps.py  urls.py
apps/project/views/: projects.py
config/: settings.py  urls.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_social_url.py  0004_rename_text_biography_text_en_biography_text_es.py  0006_rename_greeting_profile_greeting_es_and_more.py
docker/sql/: init.sql
static/css/: base.css  fonts.css
static/css/customs/: _tooltip.css
static/js/: base.js  theme-toggle.js
static/js/customs/: _codeblock.js  _slideshow.js
templates/: base.html
templates/blogs/: blogs_list.html  blogs_list_with_image.html
templates/blogs/posts/: blog-post-number-1.html
templates/common/: _codeblock.html  _footer.html  _navbar.html  _slideshow.html
templates/core/: home.html
templates/projects/: datax.html  fitomenu.html  portfolio.html  project_list.html  proyect_detail.html
