[project]
name = "portfolio"
version = "0.1.0"
description = "Personal portfolio built with Django"
authors = [{ name = "fpenate", email = "jfph25@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
  "django",
  "python-decouple",
  "whitenoise",
  "pre-commit",
  "requests>=2.32.3",
  "psycopg[binary]>=3.2.6",
]
